# BitboardCA-embedded

./: CHANGELOG  CMakeLists.txt  README
include/: GenerationOuterTotalisticCA.h  IBasicBitboardCA.h  IViewableBitboard.h  LargeBitboard.h  MultiStateOuterTotalisticCA.h  NeumannOuterTotalisticCA.h  OuterTotalisticCA.h  bbcommon.h
src/: GenerationOuterTotalisticCA.cpp  LargeBitboard.cpp  Makefile  MultiStateOuterTotalisticCA.cpp  NeumannOuterTotalisticCA.cpp  OuterTotalisticCA.cpp  bbcommon.cpp
